fix: visual bug when icons not covering area

--- a/source/sass/acfIconField.scss
+++ b/source/sass/acfIconField.scss
@@ -63,6 +63,7 @@
         flex-wrap: wrap;
         background-color: #f9f9f9;
         justify-content: space-between;
+        align-content: flex-start;
         align-items: flex-start;
         overflow: hidden;
         overflow-y: auto;
